[gd_scene load_steps=4 format=3 uid="uid://do0o0dxudg2ie"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_x3scg"]

[sub_resource type="LabelSettings" id="LabelSettings_8f5rh"]
font_size = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6r7qg"]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x3scg")

[node name="PointsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 64.0
text = "0"
label_settings = SubResource("LabelSettings_8f5rh")

[node name="ResetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_6r7qg")
text = "Game over!  Click to restart"
flat = true

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
